// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGroupsTab should match a snapshot where there is data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-fade-in el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="3"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Group Name
          </div>
          <div
            class="el-table-header"
          >
            Description
          </div>
          <div
            class="el-table-header"
          >
            Member Count
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                MarketplaceAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer the Reapit Marketplace for an organisation or organisation office group
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                4
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 18 18"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <path
                              d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                              fill="currentColor"
                            />
                          </g>
                          <defs>
                            <clippath
                              id="clip0"
                            >
                              <rect
                                fill="white"
                                height="20.0003"
                                width="20"
                              />
                            </clippath>
                          </defs>
                        </svg>
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-MarketplaceAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                OrganisationAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer an organisation
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                1
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 18 18"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <path
                              d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                              fill="currentColor"
                            />
                          </g>
                          <defs>
                            <clippath
                              id="clip0"
                            >
                              <rect
                                fill="white"
                                height="20.0003"
                                width="20"
                              />
                            </clippath>
                          </defs>
                        </svg>
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-OrganisationAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                ReapitUserAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who are Reapit customers who can perform admin Foundations actions
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                3
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 18 18"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <path
                              d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                              fill="currentColor"
                            />
                          </g>
                          <defs>
                            <clippath
                              id="clip0"
                            >
                              <rect
                                fill="white"
                                height="20.0003"
                                width="20"
                              />
                            </clippath>
                          </defs>
                        </svg>
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-ReapitUserAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 6L9 0V12L0 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6L3 12V0L12 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-fade-in el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="3"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          Group Name
        </div>
        <div
          class="el-table-header"
        >
          Description
        </div>
        <div
          class="el-table-header"
        >
          Member Count
        </div>
        <div
          class="el-table-header"
        >
          <span
            class="el-icon"
            style="font-size: 1.2rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              MarketplaceAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer the Reapit Marketplace for an organisation or organisation office group
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              4
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 18 18"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                            fill="currentColor"
                          />
                        </g>
                        <defs>
                          <clippath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="20.0003"
                              width="20"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-MarketplaceAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              OrganisationAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer an organisation
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              1
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 18 18"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                            fill="currentColor"
                          />
                        </g>
                        <defs>
                          <clippath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="20.0003"
                              width="20"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-OrganisationAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              ReapitUserAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who are Reapit customers who can perform admin Foundations actions
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              3
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 18 18"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                            fill="currentColor"
                          />
                        </g>
                        <defs>
                          <clippath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="20.0003"
                              width="20"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-ReapitUserAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-pagination-wrap"
    >
      <div
        class="el-pagination-text"
      >
        <input
          class="el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 6L9 0V12L0 6Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6L3 12V0L12 6Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is data but no user groups 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No users found
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No users found
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is no orgId 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          User Groups
        </h1>
      </div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view user groups.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        User Groups
      </h1>
    </div>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view user groups.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
